# cleaning-app-backend

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: build_docker_image.yml  check_linting.yaml  check_pull_request_linting.yaml
cleaning_app/: .env
cleaning_app/app/: alembic.ini  routers.py
cleaning_app/app/apartments/: models.py  routers.py
cleaning_app/app/apartments/depends/: apartment.py  room.py
cleaning_app/app/apartments/serializers/: apartment.py  room.py
cleaning_app/app/apartments/views/: apartment.py  rooms.py
cleaning_app/app/common/: pagination_page.py
cleaning_app/app/migrations/: env.py  script.py.mako
cleaning_app/app/migrations/versions/: 092d9a6968f8_.py  1e1c9d7bcc4b_.py  3573d566b6f0_.py  c020bbb9aed9_.py  c5bf7b8081ad_.py  c8670b0ade52_.py  cbb357afe4e7_.py  fc06769379e7_.py
cleaning_app/app/tasks/: depends.py  models.py
cleaning_app/app/tasks/serializers/: completed_task.py  scheduled_tasks.py  task.py  task_schedule.py
cleaning_app/app/tasks/services/: task_schedule.py  task_schedule_create.py  task_schedule_delete.py
cleaning_app/app/tasks/views/: __init__.py  completed_task.py  scheduled_task.py  task.py  task_schedule.py
cleaning_app/app/users/: depends.py  manager.py  models.py  router.py  serializers.py  views.py
cleaning_app/core/: app.py  config.py  db.py
docker/: dev.dockerfile  production.dockerfile
scripts/: start.sh  start_production.sh
